--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="title">
         <h1>TO DO LIST</h1>
+        <h6>*double click to edit</h6>
     </div>
     <div class="center container">
         <div class="todo">
